--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSAP Animation</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="section-1">
         <nav>
-            <h1>Wizard</h1>
+            <h1><i class="ri-shining-2-fill"></i> Wizard</h1>
             <div class="part2">
                 <h4>Adout</h4>
                 <h4>Service</h4>
@@ -19,6 +21,14 @@
                 <button>Request a quote</button>
             </div>
         </nav>
+        <div class="center">
+            <div class="certer-part1">
+                <h1>Navigating the digital landscape for success</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, qui vel nesciunt repudiandae necessitatibus voluptatibus maiores! Soluta quidem numquam alias officia aperiam officiis blanditiis error ipsum accusantium corrupti? Quae, temporibus.</p>
+                <button>Book a consultation</button>
+            </div>
+            <div class="certer-part2"></div>
+        </div>
     </section>
 
 
