--- a/index.html
+++ b/index.html
@@ -42,8 +42,17 @@
     </section>
 
     <section class="section2">
-        <div></div>
+        <div>
+            <h2>Service</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus quasi ad quibusdam tempore non provident illo vel numquam est cum.</p>
+        </div>
+        <div>
+            <div>
+                
+            </div>
+        </div>
     </section>
+
 
 
     <script src="script.js"></script>
