--- a/index.html
+++ b/index.html
@@ -42,13 +42,34 @@
     </section>
 
     <section class="section2">
-        <div>
+        <div class="title">
             <h2>Service</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus quasi ad quibusdam tempore non provident illo vel numquam est cum.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus quasi ad quibusdam tempore  <br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
         </div>
-        <div>
+        <div class="container">
+            <div class="elem">
+                <div>
+                    <h2>Search engine <br>optimization</h2>
+                    
+                </div>
+            </div>
             <div>
-                
+                <div>
+                    <h2>Search engine <br>optimization</h2>
+
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h2>Search engine <br>optimization</h2>
+
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h2>Search engine <br>optimization</h2>
+
+                </div>
             </div>
         </div>
     </section>
