--- a/index.html
+++ b/index.html
@@ -48,29 +48,14 @@
         </div>
         <div class="container">
             <div class="elem">
-                <div>
-                    <h2>Search engine <br>optimization</h2>
-                    
+                <div class="elem-part1">
+                    <h2>Search engin optimization</h2>
+                    <h4>Learn More</h4>
                 </div>
             </div>
-            <div>
-                <div>
-                    <h2>Search engine <br>optimization</h2>
-
-                </div>
-            </div>
-            <div>
-                <div>
-                    <h2>Search engine <br>optimization</h2>
-
-                </div>
-            </div>
-            <div>
-                <div>
-                    <h2>Search engine <br>optimization</h2>
-
-                </div>
-            </div>
+            <div class="elem"></div>
+            <div class="elem"></div>
+            <div class="elem"></div>
         </div>
     </section>
 
