--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
             <div class="elem">
                 <div class="elem-part1">
                     <h2>Search engin optimization</h2>
-                    <h4>Learn More</h4>
+                    <h4><i class="ri-arrow-right-up-line"></i> Learn More</h4>
                 </div>
+                <div class="elem-part2"><img src="./Image/Illustration.png" alt=""></div>
             </div>
             <div class="elem"></div>
             <div class="elem"></div>
